# parrot-commons

./: pyproject.toml
src/parrot_commons/: sense_voice_small.py
