[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.poetry]
packages = [
    { include = "parrot_commons", from = "src" },
]

[project]
name = "parrot-commons"
version = "0.1.0"
description = "Parrot Audio model commons"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
]


[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["build", "dist", "env", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
    "PLR0913",
    "TC001",
    "COM812",
    "ISC001",
    "TC002",
    "PLW1514", # allow Path.open without encoding
    "RET505", # allow `else` blocks
    "RET506", # allow `else` blocks
    "PD011", # ignore .values usage since ruff assumes it's a Pandas DataFrame
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"